[package]
name = "mpdf"
version = "0.1.0"
authors = ["Adam Wychowaniec <adamwychowaniecgl@gmail.com>"]
edition = "2018"

[dependencies]
printpdf = "0.3.2"
pathfinder_geometry = "0.5"
pathfinder_simd = "0.5"
png = "0.16.7"
hex = "0.4.2"
html5ever = "*"
markup5ever_rcdom = "0.1.0"
lazy_static = "1.4.0"

[dependencies.font-kit]
version = "0.10.0"
features = ["loader-freetype", "loader-freetype-default"]